salesforce-classic-Feature-IN-955/src/objects/Tract_Order_Custom_Field__c.object
<CustomObject>
    <label>Gotransverse Order Custom Field</label>
    <nameField>
        <label>Gotransverse_Order_Custom_Field__c Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Gotransverse Order Custom Fields</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Eid__c</fullName>
        <label>Gotransverse Eid</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>orderCustomFieldType__c</fullName>
        <label>Gotransverse Order Custom Field Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Store_Order_List_Value__c</fullName>
        <label>Gotransverse Store Order List Value</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ValidationType__c</fullName>
        <label>Gotransverse Validation Type</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Gotransverse Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>